src/pages/Events/EventsHome/EventsHome.css
.events-home-buttons {
  width: 100%;
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow-y: auto;
  gap: 10px;
}

.events-home-buttons button {
  z-index: 20;
  transition: 0.2s;
}

.events-home-buttons button:hover {
  transform: translateY(-5px);
}

